Rename service and update DB connection placeholders
Updated service name and database configuration placeholders.

--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,11 @@
 services:
   - type: web
-    name: n8n-server
+    name: n8n-server-cloud-unique
     runtime: node
     plan: free
     region: singapore
-    buildCommand: npm install
-    startCommand: npm start
+    buildCommand: "npm install"
+    startCommand: "npm start"
     envVars:
       - key: N8N_PORT
         value: 10000
@@ -14,12 +14,12 @@ services:
       - key: DB_TYPE
         value: postgresdb
       - key: DB_POSTGRESDB_DATABASE
-        value: "REPLACE_WITH_NEON_DB_NAME"
+        value: "REPLACE_WITH_YOUR_NEON_DB_NAME"
       - key: DB_POSTGRESDB_HOST
-        value: "REPLACE_WITH_NEON_HOSTNAME"
+        value: "REPLACE_WITH_YOUR_NEON_HOSTNAME"
       - key: DB_POSTGRESDB_PORT
         value: "5432"
       - key: DB_POSTGRESDB_USER
-        value: "REPLACE_WITH_NEON_USERNAME"
+        value: "REPLACE_WITH_YOUR_NEON_USERNAME"
       - key: DB_POSTGRESDB_PASSWORD
-        value: "REPLACE_WITH_NEON_PASSWORD"
+        value: "REPLACE_WITH_YOUR_NEON_PASSWORD"
