Modify n8n server configuration in render.yaml
Updated service name and environment variables for n8n cloud server configuration.

--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,10 @@
 services:
   - type: web
-    name: n8n-server-cloud-unique
+    name: n8n-cloud-server
     runtime: node
     plan: free
     region: singapore
-    buildCommand: "npm install"
+    buildCommand: "npm install --production"
     startCommand: "npm start"
     envVars:
       - key: N8N_PORT
@@ -13,13 +13,13 @@ services:
         value: "tneSIPQK3+GB3gVuRAsbb5t4Mhu/LgQi"
       - key: DB_TYPE
         value: postgresdb
-      - key: DB_POSTGRESDB_DATABASE
-        value: "REPLACE_WITH_YOUR_NEON_DB_NAME"
-      - key: DB_POSTGRESDB_HOST
-        value: "REPLACE_WITH_YOUR_NEON_HOSTNAME"
       - key: DB_POSTGRESDB_PORT
         value: "5432"
+      - key: DB_POSTGRESDB_DATABASE
+        value: "ENTER_NEON_DB_NAME_HERE"
+      - key: DB_POSTGRESDB_HOST
+        value: "ENTER_NEON_HOST_HERE"
       - key: DB_POSTGRESDB_USER
-        value: "REPLACE_WITH_YOUR_NEON_USERNAME"
+        value: "ENTER_NEON_USER_HERE"
       - key: DB_POSTGRESDB_PASSWORD
-        value: "REPLACE_WITH_YOUR_NEON_PASSWORD"
+        value: "ENTER_NEON_PASSWORD_HERE"
