--- a/render.yaml
+++ b/render.yaml
@@ -23,5 +23,7 @@ services:
         value: "neondb_owner"
       - key: DB_POSTGRESDB_PASSWORD
         value: "npg_akCs1DZblHL7"
+      - key: DB_POSTGRESDB_SSL_MODE
+        value: "require"
       - key: DB_POSTGRESDB_SSL_REJECT_UNAUTHORIZED
         value: "false"
